# dial9-tokio-telemetry

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  README.md  SECURITY.md  aggregator.md  release-plz.toml  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/environments/: release.json
.github/rulesets/: README.md  protect-main.json  protect-release-glob.json  protect-release-slash.json  (+1 more)
dial9/: Cargo.toml  README.md
dial9-core/: Cargo.toml  README.md
dial9-core/src/: boot_id.rs  buffer.rs  clock.rs  collector.rs  custom_events.rs  dump.rs  encoder.rs  flush_loop.rs  format.rs  handle.rs  lib.rs  metrics.rs  pipeline.rs  pipeline_shuttle_tests.rs  primitives.rs  rate_limit.rs  recorder.rs  recording.rs  sampling.rs  sealed.rs  session.rs  shared_state.rs  source.rs  test_util.rs  thread.rs  writer.rs
dial9-core/src/fs/: disk.rs  mem.rs  mod.rs
dial9-core/src/worker/: metrics.rs  mod.rs  pipeline_metrics.rs  processors.rs  tests.rs
dial9-macro/: Cargo.toml
dial9-macro/src/: lib.rs
dial9-macro/src/snapshots/: dial9_macro__tests__expand_basic.snap  dial9_macro__tests__expand_with_attributes.snap  dial9_macro__tests__expand_with_inline_closure.snap  dial9_macro__tests__expand_with_move_closure.snap  dial9_macro__tests__expand_with_return_type.snap
dial9-tokio-telemetry/: Cargo.toml  README.md
dial9-trace-format/: Cargo.toml  README.md  SPEC.md
dial9-trace-format-derive/: Cargo.toml
dial9-utils/: Cargo.toml
dial9-utils/src/: connection.rs  instance_metadata.rs  lib.rs  s3.rs
dial9-viewer/: 2026-06-28-090321-implement-httpsgithubcomdial9-rsdial9issue.txt  Cargo.toml  README.md  build.rs  skill-source.md
dial9-viewer/benches/: decode_bench.rs
dial9-viewer/benchmarks/long-poll-diagnosis/: EXPECTED.md  README.md  run.sh
dial9-viewer/examples/: embedded_viewer.rs
dial9-viewer/skills/: analyze.js  recipes.md  red-flags.md
dial9-viewer/skills/dial9-diagnose-long-poll/: SKILL.md
dial9-viewer/skills/dial9-diagnose-long-poll/scripts/: diagnose_long_poll.js
dial9-viewer/skills/dial9-red-flags/: SKILL.md
dial9-viewer/skills/dial9-red-flags/scripts/: red_flag_scan.js
dial9-viewer/skills/dial9-runtime/: SKILL.md
dial9-viewer/skills/dial9-toolkit/: SKILL.md
dial9-viewer/skills/dial9-toolkit/scripts/: analyze.js  diagnose_setup.js
dial9-viewer/skills/dial9-trace-analysis/: SKILL.md
dial9-viewer/skills/dial9-trace-loading/: SKILL.md
dial9-viewer/skills/dial9-trace-recipes/: SKILL.md
dial9-viewer/skills/dial9-zoom-window/: SKILL.md
dial9-viewer/skills/dial9-zoom-window/scripts/: zoom.js
dial9-viewer/src/: cli.rs  lib.rs  main.rs  storage.rs
dial9-viewer/src/ingest/: aggregate.rs  decode.rs  mod.rs  parquet_writer.rs  refine.rs
dial9-viewer/src/server/: browse.rs  buckets.rs  check.rs  config.rs  credentials.rs  error.rs  flamegraph.rs  metrics.rs  mod.rs  prefixes.rs  search.rs  tokio_stats.rs  trace.rs  upload.rs
dial9-viewer/tests/: aggregate_test.rs  decode_test.rs  parser_parity_test.rs  server_test.rs
dial9-viewer/tests/fixtures/: demo-trace.properties.json
dial9-viewer/ui/: README.md  creds.js  diff_test.html  flamegraph.css  flamegraph.html  flamegraph.js  flamegraph_api.js  flamegraph_diff.js  flamegraph_diff_view.js  flamegraph_histogram.js  flamegraph_view_state.js  format.js  heatmap.js  index.html  prefix_detect.js  sse.js  test_all_skills_snippets.js  test_block_in_place.js  test_creds.js  test_diagnose_setup.js  test_fetch_traces.js  test_flamegraph_api.js  test_flamegraph_deeplink.js  test_flamegraph_diff.js  test_flamegraph_diff_view_state.js  test_flamegraph_exact_view_state.js  test_flamegraph_histogram.js  test_flamegraph_inspect.js  test_flamegraph_inspect_dom.js  test_flamegraph_setdirect_export.js  test_flamegraph_view_state.js  test_focus_timebase.js  test_format.js  test_heatmap.js  test_parse_key.js  test_parse_yield_throttle.js  test_poll_color.js  test_prefix_detection.js  test_runtime_groups.js  test_sse.js  (+14 more)
dial9/examples/: analyze_trace.rs  block_in_place_workload.rs  blocking_sleep.rs  conditionally_enable.rs  cpu_profile_workload.rs  custom_events.rs  custom_pipeline.rs  generate_diagnostic_traces.rs  in_memory_pipeline.rs  kernel_sched_events.rs  long_workload.rs  many_workers.rs  multi_runtime.rs  on_trigger_dump.rs  on_trigger_dump_windows.rs  production_use.rs  realistic_workload.rs  s3_stress_test.rs  simple_workload.rs  telemetry_rotating.rs  test_hooks.rs  thread_per_core.rs  tracing_sleep.rs
dial9/src/: env_config.rs  lib.rs  main.rs
dial9/tests/: common.rs  macro_graceful_shutdown_symbolization.rs  macro_main.rs  memory_profiling_hook_captures.rs  memory_profiling_hook_realloc.rs  memory_profiling_install_already_installed.rs  memory_profiling_install_disabled.rs  memory_profiling_install_publishes.rs  memory_profiling_no_overflow.rs  memory_profiling_opt_out_no_panic.rs  memory_profiling_overflow_event.rs  memory_profiling_segment_metadata.rs  namespace_isolation.rs  recorder.rs  recorder_symbolization.rs  traced_runtime.rs
docs/: aggregation-feature.md
examples/: README.md  android_build.sh
perf-self-profile/: Cargo.toml  README.md
perf-self-profile/examples/: basic.rs
perf-self-profile/src/: cpu_source.rs  lib.rs  offline_symbolize.rs  process_resource.rs  rate_limit.rs  recorder_ext.rs  socket_accept_queues.rs  symbolize_processor.rs  sys.rs  unwinder.rs
perf-self-profile/src/memory_profiling/: allocator.rs  events.rs  hook.rs  mod.rs  profiler.rs  ring.rs  source.rs
perf-self-profile/src/sys/: linux.rs  unsupported.rs
perf-self-profile/src/sys/linux/: ctimer_sampler.rs  offline_symbolize.rs  perf_sampler.rs  sampler.rs  symbolize.rs
perf-self-profile/src/sys/linux/fp_profiler/: android_sigchain.rs  bionic_arm64.rs  ctimer.rs  mod.rs  unwind.rs
perf-self-profile/tests/: sched_triggers.rs
scripts/: e2e-trace-tests.sh  generate_diagnostic_traces.sh  integ-test-s3-upload.sh  regenerate_block_in_place_trace.sh  regenerate_demo_trace.sh  sample-rate-experiment.sh  stress-test-s3-worker.sh  test-shuttle.sh
(+144 files in other folders)
