[workspace]
resolver = "3"
members = [
    "dial9-core",
    "dial9-tokio-telemetry",
    "dial9-trace-format",
    "dial9-trace-format-derive",
    "dial9-macro",
    "dial9-viewer",
    "dial9",
    "dial9-utils",
    "perf-self-profile",
    "examples/metrics-service",
    "examples/simple-local",
    "examples/memory-local",
]
exclude = [
    "dial9-trace-format/fuzz",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/dial9-rs/dial9-tokio-telemetry"

[workspace.dependencies]
libc = "0.2"
dial9-core = { version = "0.4.0-alpha.1", path = "dial9-core" }
dial9-utils = { version = "0.4.0-alpha.1", path = "dial9-utils" }
dial9-perf-self-profile = { version = "0.4.4", path = "perf-self-profile" }
dial9-trace-format = { version = "0.4.1", path = "dial9-trace-format" }
dial9-trace-format-derive = { version = "0.4.1", path = "dial9-trace-format-derive" }
dial9-macro = { version = "0.3.7", path = "dial9-macro" }
assert2 = "0.4"

[profile.release]
debug = 1

[patch.crates-io]
# ponytail: remove after libc publishes the Android POSIX timer bindings added by this commit.
libc = { git = "https://github.com/rust-lang/libc.git", rev = "51e1f84dbcad9e2e1b06634fb0825566c412c165" }
