[package]
name = "dial9-utils"
version = "0.5.0-rc0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "S3 upload SegmentProcessor for dial9-core's pipeline"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(shuttle)"] }

[dependencies]
dial9-core = { workspace = true, features = ["pipeline"] }
bon = "3"
tokio = { version = "1", features = ["fs"], default-features = false }
tracing = "0.1.44"
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "sigv4a",
    "rt-tokio",
    "default-https-client",
] }
aws-config = { version = "1", default-features = false }
time = { version = "0.3", features = ["formatting", "macros"] }
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
dial9-core = { workspace = true, features = ["pipeline", "test-util"] }
assert2 = { workspace = true }
async-trait = "0.1.89"
flate2 = "1"
tempfile = "3"
tokio = { version = "1.52.0", features = ["rt", "macros", "time", "test-util"] }
s3s = "0.14.1"
s3s-fs = "0.14.1"
s3s-aws = "0.14.1"
