[package]
name = "dial9-viewer"
version = "0.5.0-rc0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI trace viewer and S3 browser for dial9-tokio-telemetry"
default-run = "dial9-viewer"
exclude = ["src/bin/dev_server.rs", "design/", "benchmarks/"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"

[features]
dev-server = ["dep:s3s", "dep:s3s-fs", "dep:s3s-aws", "dep:tempfile"]

[[bin]]
name = "dial9-viewer"
path = "src/main.rs"

[[bin]]
name = "dev-server"
path = "src/bin/dev_server.rs"
required-features = ["dev-server"]

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["query"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4"] }
form_urlencoded = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Per-request operational metrics. `emf` emits CloudWatch EMF to stdout in
# production; `local-format` renders a human-readable variant under `--local`.
metrique = { version = "0.1.23", features = ["emf", "local-format"] }
metrique-writer = "0.1"
time = "0.3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "default-https-client", "http-1x", "rt-tokio", "sigv4a"] }
anyhow = "1"
bon = "3"
s3s = { version = "0.14.1", optional = true }
s3s-fs = { version = "0.14.1", optional = true }
s3s-aws = { version = "0.14.1", optional = true }
tempfile = { version = "3", optional = true }

# Aggregator dependencies
dial9-trace-format = { workspace = true, features = ["serde-deserialize"] }
arrow = { version = "54", default-features = false }
parquet = { version = "54", default-features = false, features = ["arrow", "flate2", "snap"] }
blake3 = "1"
lasso = "0.7"
rustc-hash = "2"
dial9-core.workspace = true

[dev-dependencies]
assert2 = { workspace = true }
metrique = { version = "0.1.23", features = ["emf", "local-format", "test-util"] }
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
s3s = "0.14.1"
s3s-fs = "0.14.1"
s3s-aws = "0.14.1"
tempfile = "3"
urlencoding = "2"
aws-smithy-http-client = { version = "1", features = ["test-util"] }
aws-smithy-types = "1"
aws-smithy-async = { version = "1", features = ["rt-tokio"] }
http = "1"

criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decode_bench"
harness = false

[target."cfg(windows)".dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Storage_FileSystem"] }
