[package]
name = "dial9-perf-self-profile"
version = "0.4.4"
edition.workspace = true
repository.workspace = true
description = "Minimal self-profiling via Linux/Android perf_event_open with frame-pointer-based stack traces"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
rustc-args = ["-C", "force-frame-pointers=yes"]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
__internal-bench = []
## Enables the dial9 `Source` integration for the profilers (`CpuProfiler`,
## `SchedProfiler`, the memory profiler).
dial9-source = ["dep:dial9-core"]
## Sampled memory allocation profiler. Feeds a dial9 trace via a `Source`.
memory-profiling = ["dial9-source", "dep:scc", "dep:crossbeam-queue", "dep:bon"]
## Allow constructing the public wire-event structs (`AllocEvent`/`FreeEvent`)
## outside this crate. Off by default keeps them `#[non_exhaustive]`.
unstable-events = []
## Test-only helpers.
test-util = []

[dependencies]
bon = { version = "3", optional = true }
bytes = "1"
crossbeam-queue = { version = "0.3", optional = true }
dial9-core = { workspace = true, optional = true }
dial9-trace-format = { workspace = true }
scc = { version = "2", optional = true }
tracing = "0.1.44"

[target.'cfg(any(target_os = "linux", all(target_os = "android", target_arch = "aarch64")))'.dependencies]
blazesym = "0.2"
crossbeam-utils = "0.8"
libc = "0.2.186"
perf-event-data = "0.1.8"
perf-event-open-sys2 = "5.0.6"

[dev-dependencies]
criterion = "0.5"
dial9-core = { workspace = true, features = ["test-util"] }
dial9-trace-format = { workspace = true, features = ["serde-deserialize"] }
serde_json = "1"

[[bench]]
name = "unwind"
harness = false
required-features = ["__internal-bench"]
